raspberrypi/etc/iptables/rules.v4
# Generated by iptables-save v1.4.14 on Fri Apr 22 11:37:23 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:Pepo-Firewall - [0:0]
-A INPUT -j Pepo-Firewall
-A FORWARD -j Pepo-Firewall
-A OUTPUT -j Pepo-Firewall
-A Pepo-Firewall -p icmp -m icmp --icmp-type any -j ACCEPT
-A Pepo-Firewall -p esp -j ACCEPT
-A Pepo-Firewall -p ah -j ACCEPT
-A Pepo-Firewall -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 631 -j ACCEPT
-A Pepo-Firewall -m state --state RELATED,ESTABLISHED -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 20 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --sport 20 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --sport 21 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 23 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 53 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 110 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 143 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 3128 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 8022 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 8090 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 8554 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 67 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 123 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 161 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 137 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 138 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 139 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT
-A Pepo-Firewall -p udp -m udp --dport 389 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 389 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 1723 -j ACCEPT
-A Pepo-Firewall -p tcp -m state --state NEW -m tcp --dport 993 -j ACCEPT
-A Pepo-Firewall -p gre -j ACCEPT
-A Pepo-Firewall -i ppp+ -p tcp -m state --state NEW -m tcp -j ACCEPT
-A Pepo-Firewall -i lo -p tcp -m state --state NEW -m tcp -j ACCEPT
-A Pepo-Firewall -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Fri Apr 22 11:37:23 2016
